linkerddashboardingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: linkerd-web
          servicePort: 37983
